; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_insn.c_pt_insn_binds_to_pip.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_insn.c_pt_insn_binds_to_pip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_insn = type { i32 }
%struct.pt_insn_ext = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pt_insn_binds_to_pip(%struct.pt_insn* %0, %struct.pt_insn_ext* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pt_insn*, align 8
  %5 = alloca %struct.pt_insn_ext*, align 8
  store %struct.pt_insn* %0, %struct.pt_insn** %4, align 8
  store %struct.pt_insn_ext* %1, %struct.pt_insn_ext** %5, align 8
  %6 = load %struct.pt_insn_ext*, %struct.pt_insn_ext** %5, align 8
  %7 = icmp ne %struct.pt_insn_ext* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %18

9:                                                ; preds = %2
  %10 = load %struct.pt_insn_ext*, %struct.pt_insn_ext** %5, align 8
  %11 = getelementptr inbounds %struct.pt_insn_ext, %struct.pt_insn_ext* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  switch i32 %12, label %13 [
    i32 130, label %17
    i32 129, label %17
    i32 128, label %17
  ]

13:                                               ; preds = %9
  %14 = load %struct.pt_insn*, %struct.pt_insn** %4, align 8
  %15 = load %struct.pt_insn_ext*, %struct.pt_insn_ext** %5, align 8
  %16 = call i32 @pt_insn_is_far_branch(%struct.pt_insn* %14, %struct.pt_insn_ext* %15)
  store i32 %16, i32* %3, align 4
  br label %18

17:                                               ; preds = %9, %9, %9
  store i32 1, i32* %3, align 4
  br label %18

18:                                               ; preds = %17, %13, %8
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @pt_insn_is_far_branch(%struct.pt_insn*, %struct.pt_insn_ext*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
